// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`webpack default 1`] = `
"module.exports = {
	plugins: [
		[
			require.resolve('@babel/plugin-proposal-decorators'),
			{
				\\"legacy\\": true
			},
		],
		[
			require.resolve('@babel/plugin-syntax-dynamic-import'),
		],
	],
	presets: [
		[
			require.resolve('@babel/preset-react'),
		],
		[
			require.resolve('@babel/preset-env'),
			{
				useBuiltIns: 'entry'
			},
		],
	],
};
"
`;

exports[`webpack default 2`] = `
"{
  \\"browserslist\\": [
    \\"> 1%\\",
    \\"last 2 versions\\",
    \\"not ie <= 10\\"
  ],
  \\"scripts\\": {
    \\"build\\": \\"webpack --mode production\\",
    \\"postinstall\\": \\"npm rebuild node-sass\\",
    \\"start\\": \\"webpack-dev-server --mode development\\"
  },
  \\"devDependencies\\": {
    \\"@babel/core\\": \\"7.6.4\\",
    \\"@babel/plugin-proposal-decorators\\": \\"7.6.0\\",
    \\"@babel/plugin-syntax-dynamic-import\\": \\"7.2.0\\",
    \\"@babel/preset-env\\": \\"7.6.3\\",
    \\"@babel/preset-react\\": \\"7.6.3\\",
    \\"asset-config-webpack-plugin\\": \\"0.1.0-mock\\",
    \\"clean-webpack-plugin\\": \\"0.1.0-mock\\",
    \\"css-loader\\": \\"3.2.0\\",
    \\"html-webpack-plugin\\": \\"0.1.0-mock\\",
    \\"scss-config-webpack-plugin\\": \\"0.1.0-mock\\",
    \\"webpack\\": \\"0.1.0-mock\\",
    \\"webpack-cli\\": \\"0.1.0-mock\\",
    \\"webpack-dev-server\\": \\"0.1.0-mock\\"
  },
  \\"dependencies\\": {
    \\"@babel/polyfill\\": \\"7.6.0\\"
  }
}"
`;

exports[`webpack default 3`] = `
"const AssetConfigWebpackPlugin = require('asset-config-webpack-plugin');
const { CleanWebpackPlugin } = require('clean-webpack-plugin');
const HtmlWebpackPlugin = require('html-webpack-plugin');
const ScssConfigWebpackPlugin = require('scss-config-webpack-plugin');

module.exports = {
  plugins: [
    // File loader configuration for .woff and .woff2 files
    // File loader configuration for .gif .jpg .jpeg .png and .svg files
    // https://github.com/namics/webpack-config-plugins/tree/master/packages/asset-config-webpack-plugin
    new AssetConfigWebpackPlugin(),
    // Cleans the dist folder before the build starts
    new CleanWebpackPlugin(),
    // Generate a base html file and injects all generated css and js files
    new HtmlWebpackPlugin(),
    // SCSS Configuration for .css .module.css and .scss .module.scss files
    // see https://github.com/namics/webpack-config-plugins/tree/master/packages/scss-config-webpack-plugin/config
    new ScssConfigWebpackPlugin(),
  ],
};
"
`;

exports[`webpack default 4`] = `
Array [
  babel.config.js,
  package.json,
  webpack.config.js,
]
`;

exports[`webpack webpack-with-ts 1`] = `
{
  "devDependencies": {
    "@namics/ts-config": "0.4.0",
    "@types/core-js": "2.5.2",
    "asset-config-webpack-plugin": "0.1.0-mock",
    "clean-webpack-plugin": "0.1.0-mock",
    "css-loader": "3.2.0",
    "html-webpack-plugin": "0.1.0-mock",
    "scss-config-webpack-plugin": "0.1.0-mock",
    "ts-config-webpack-plugin": "0.1.0-mock",
    "typescript": "0.1.0-mock",
    "webpack": "0.1.0-mock",
    "webpack-cli": "0.1.0-mock",
    "webpack-dev-server": "0.1.0-mock"
  },
  "browserslist": [
    "> 1%",
    "last 2 versions",
    "not ie <= 10"
  ],
  "scripts": {
    "build": "webpack --mode production",
    "postinstall": "npm rebuild node-sass",
    "start": "webpack-dev-server --mode development"
  },
  "dependencies": {
    "core-js": "3.3.3"
  }
}
`;

exports[`webpack webpack-with-ts 2`] = `
{
	"extends": "@namics/ts-config",
	"exclude": ["dist", "build", "node_modules", "__tests__"]
}

`;

exports[`webpack webpack-with-ts 3`] = `
const AssetConfigWebpackPlugin = require('asset-config-webpack-plugin');
const { CleanWebpackPlugin } = require('clean-webpack-plugin');
const HtmlWebpackPlugin = require('html-webpack-plugin');
const ScssConfigWebpackPlugin = require('scss-config-webpack-plugin');
const TsConfigWebpackPlugin = require('ts-config-webpack-plugin');

module.exports = {
  plugins: [
    // File loader configuration for .woff and .woff2 files
    // File loader configuration for .gif .jpg .jpeg .png and .svg files
    // https://github.com/namics/webpack-config-plugins/tree/master/packages/asset-config-webpack-plugin
    new AssetConfigWebpackPlugin(),
    // Cleans the dist folder before the build starts
    new CleanWebpackPlugin(),
    // Generate a base html file and injects all generated css and js files
    new HtmlWebpackPlugin(),
    // SCSS Configuration for .css .module.css and .scss .module.scss files
    // see https://github.com/namics/webpack-config-plugins/tree/master/packages/scss-config-webpack-plugin/config
    new ScssConfigWebpackPlugin(),
    // Multi threading typescript loader configuration with caching for .ts and .tsx files
    // see https://github.com/namics/webpack-config-plugins/tree/master/packages/ts-config-webpack-plugin/config
    new TsConfigWebpackPlugin(),
  ],
};

`;

exports[`webpack webpack-with-ts 4`] = `
Array [
  package.json,
  tsconfig.json,
  webpack.config.js,
]
`;
